[tool.poetry]
name = "mnmnwag"
version = "3.2"
description = ""
authors = ["Matthew Newton <matthewn@mahnamahna.net>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "~5"
wagtail = "*"
django-dbbackup = "*"
django-debugtools = "*"
django-extensions = "*"
werkzeug = "*"
django-compressor = "*"
django-libsass = "*"
django-likes = { git = "https://github.com/matthewn/django-likes", branch = "django5" }
django-capture-tag = "*"
django-typogrify = { git = "https://github.com/matthewn/django-typogrify", branch = "django40" }
django-comments-xtd = "*"
django-debug-toolbar = "*"
django-markdown2 = "*"
psycopg = "*"
wagtailmedia = "*"
tweepy = "*"
django-cachalot = "*"
django-browser-reload = "*"
pywatchman = "*"
django-honeypot = "*"
pyexiv2 = "*"
gunicorn = "*"
setproctitle = "*"
seevooplay = "*"
django-antispam = "*"
django-crequest = "*"
num2words = "*"
wagtail-footnotes = "*"
wand = "^0.6.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
