[project]
name = "mnmnwag"
version = "3.2"
description = ""
authors = [{ name = "Matthew Newton", email = "matthewn@mahnamahna.net" }]
requires-python = ">=3.13, <4"
dependencies = [
    "django>=5,<6",
    "wagtail",
    "django-antispam",
    "django-browser-reload",
    "django-cachalot",
    "django-capture-tag",
    "django-comments-xtd",
    "django-compressor",
    "django-crequest",
    "django-dbbackup",
    "django-debug-toolbar",
    "django-debugtools",
    "django-extensions",
    "django-honeypot",
    "django-libsass",
    "django-likes",
    "django-markdown2",
    "django-typogrify",
    "gunicorn",
    "mastodon-py",
    "num2words",
    "psycopg",
    "pyexiv2",
    "pywatchman",
    "seevooplay",
    "setproctitle",
    "wagtail-footnotes",
    "wagtailmedia",
    "wand",
    "werkzeug",
]

[dependency-groups]
dev = []

[tool.uv]

[tool.uv.sources]
django-likes = { git = "https://github.com/matthewn/django-likes", branch = "django5" }
django-typogrify = { git = "https://github.com/matthewn/django-typogrify", branch = "django40" }
